--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header {
 }
 
 .card {
-  background-color: hsl(0, 0%, 100%);
+  background-color: hsl(197, 49%, 79%);
   border-radius: 5px;
   border-width: 1px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
@@ -60,7 +60,7 @@ header {
   appearance: none;
   width: 100%;
   height: 25px;
-  background: silver;
+  background: rgb(85, 165, 189);
   opacity: 0.7; 
   -webkit-transition: .2s; 
   transition: opacity .2s;
